position: relative 사용

--- a/pages/1.UseCSS.html
+++ b/pages/1.UseCSS.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="../assets/style.css">
 </head>
 <body>
-    
     <header>
         <nav class="nav">
             <ul>
@@ -18,12 +17,14 @@
             </ul>
         </nav>
         <div id="backimg1">
+        <img height="500px" width="80%" src="../media/surfing1.jpg" alt="대지에 꽂힌 서핑보드 사진-메인사진">
+        </div>
         <p><span style="color: aquamarine;" >YOUR</span>
-        <br><span style="font-size: xx-large; font-weight: bolder; color: rgb(72, 168, 35);">Beautiful Escape</span>
-        <br><span style="color:rgb(231, 133, 21)">One of the greatest things about the sport of surfing is
+        <br><span style="font-size: 2em; font-weight: bolder; color: rgb(72, 168, 35);">Beautiful Escape</span>
+        <br><span style="color:rgb(251, 255, 0)">One of the greatest things about the sport of surfing is
         <br>that you need only three things: your body,
         <br>a surfboard, and a wave</span>
-        </p></div>
+        </p>
     </header>
     <section class="sec1">
     <p>
