google 페이지 클론코딩

--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio1</title>
+    <link rel="stylesheet" href="/assets/style.css">
+    <title>Document</title>
 </head>
 <body>
-    
+<div id="wrapper">
+    <div>
+        <div id="menu">
+            <div id="box1">
+                <div id="item1">Gmail</div>
+                <div id="item2">이미지</div>
+            </div>
+            <div id="box2">
+                <div id="shape1">
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                    <div class="dot"></div>
+                </div>
+                <div id="shape2">S</div>
+            </div>
+        </div>
+    </div>
+
+    <div id="content">
+        <div id="google">
+            <span id="word1">G</span><span id="word2">o</span><span id="word3">o</span><span id="word4">g</span><span id="word5">l</span><span id="word6">e</span>
+        </div>
+        <div id="search">
+            <label for="serc">돋보기</label>
+            <input type="text" id="serc" autofocus>
+        </div>
+        <div id="rest">2</div>
+    </div>
+
+
+</div>
 </body>
 </html>
